# excavate_manufacturate

./: Cargo.toml
assets/excavatemanufacturate/shaders/: gbuffer.wgsl
src/: game.rs  game_menu.rs  keybinds.rs  main.rs  main_menu.rs  menu.rs  state.rs
src/mob/: mod.rs  physics.rs
src/mob/player/: camera.rs  interact.rs  mod.rs
src/player/: cursor.rs  interact.rs  keybinds.rs  mod.rs  movement.rs
src/util/: block_pos.rs  chunk_pos.rs  dda.rs  mesh.rs  mod.rs  raytrace.rs
src/voxel/: chunk.rs  gen.rs  mod.rs  voxels.rs  world.rs
src/world/: block.rs  block_registry.rs  chunk.rs  collider.rs  generation.rs  mod.rs  render.rs  render_distance.rs  world_access.rs  worldgen.rs
src/world/block/: dynamic_block_data.rs  excavatemanufacturate_blocks.rs  mod.rs  registry.rs  static_block_data.rs
src/world/block/static_block_data/: mod.rs
